# zag-ai

./: .gitignore  1_output_universal.md  README.md  pyproject.toml  todo.md
.qoder/rules/: rules.md
docs/: extractor_design.md  fusion_strategies.md  indexer_design.md  llamaindex_chat_engine_agent_analysis.md  markdown_table_processing_design.md  postprocessor_design.md  retriever_design.md  selector_design.md  table_splitting_challenge.md
examples/: test_docling_reader.py  test_embedder_bailian.py  test_extractors_bailian.py  test_fulltext_indexer.py  test_fulltext_retriever.py  test_fusion_retriever.py  test_indexer.py  test_markdown_splitter.py  test_markitdown_reader.py  test_mineru_reader.py  test_postprocessors_mock.py  test_recursive_merging.py  test_retriever.py  test_retriever_mock.py  test_table_boundary.py  test_table_concurrent_performance.py  test_table_extractor_enhanced.py  test_table_extractor_simple.py  test_table_parser.py  test_vector_store.py  test_vector_store_improvements.py
examples/complex_table/: test_pandas_table_parser.py
examples/e2e/: chat_md.py  pdf_layer_extraction.py  pre_release_test.py  rag_example.py
examples/embedders/: ollama_example.py  openai_example.py
examples/extractors/: compression_mortgage_example.py  heading_extraction.py  keyword_structured_example.py  table_enricher_example.py  table_enricher_normalize_example.py  table_example.py
examples/files/: complex_table.html  mortgage_products.md
examples/indexers/: fulltext_example.py  vector_example.py
examples/parsers/: table_basic_example.py  table_critical_filter_example.py  table_pandas_example.py  table_reader_integration_example.py
examples/postprocessors/: chain_example.py  comprehensive_example.py  conditional_example.py  context_augmentor_example.py  deduplicator_example.py  heading_correction_test.py  pipeline_example.py  reranker_cohere_example.py  reranker_example.py  reranker_ollama_example.py  selector_llm_example.py  similarity_filter_example.py  token_compressor_example.py
examples/readers/: camelot_example.py  docling_example.py  lightonocr_example.py  markitdown_example.py  mineru_example.py  pdfplumber_example.py  tabula_example.py  test_large_file.py
examples/retrievers/: fulltext_example.py  fusion_example.py  tree_mcts_example.py  tree_simple_example.py  tree_skeleton_retrieve_example.py  tree_skeleton_search_example.py
examples/schemas/: pdf_archive_load_example.py
examples/splitters/: chunk_splitter_example.py  free_composition_example.py  markdown_header_example.py  pipeline_example.py  recursive_merging_example.py  table_protection_example.py
examples/storages/: chroma_example.py  chroma_filter_example.py  filter_comparison.py  lancedb_example.py  lancedb_filter_example.py  milvus_example.py  performance_benchmark.py  qdrant_example.py  qdrant_filter_example.py
output/: TEST_1_Default_Pipeline.md  TEST_1_Default_Pipeline_metadata.json  Untitled.md
scripts/: README.md  pre_release.ps1
zag/: __init__.py  exceptions.py
zag/embedders/: __init__.py  base.py  embedder.py  exceptions.py  uri.py
zag/embedders/providers/: __init__.py  bailian.py  base.py  ollama.py  openai.py
zag/extractors/: __init__.py  base.py  compression.py  heading.py  keyword.py  structured.py  table.py  table_enricher.py  table_summarizer.py
zag/generators/: __init__.py  general.py
zag/indexers/: __init__.py  base.py  fulltext_indexer.py  vector_indexer.py
zag/parsers/: __init__.py  table.py
zag/postprocessors/: __init__.py  base.py
zag/postprocessors/augmentors/: __init__.py  context.py  table_context.py
zag/postprocessors/composite/: __init__.py  chain.py  conditional.py
zag/postprocessors/compressors/: __init__.py  token.py
zag/postprocessors/correctors/: __init__.py  heading.py
zag/postprocessors/filters/: __init__.py  deduplicator.py  similarity.py
zag/postprocessors/rerankers/: __init__.py  base.py  exceptions.py  reranker.py  uri.py
zag/readers/: __init__.py  base.py  camelot.py  claude_vision.py  docling.py  lightonocr.py  markdown_tree.py  markitdown.py  mineru.py  pdfplumber.py  pymupdf4llm.py  tabula.py
zag/rerankers/: __init__.py  base.py
zag/retrievers/: __init__.py  base.py
zag/retrievers/tree/: mcts.py  (+3 more)
zag/schemas/: __init__.py  base.py  document.py  markdown.py  metadata.py  pdf.py  plain.py  tree.py  types.py  unit.py  word.py
zag/splitters/: __init__.py  base.py  chonkie.py  table.py  text.py
zag/storages/: __init__.py
zag/utils/: __init__.py  filter_converter.py  hash.py  logger.py  page_inference.py  progress.py  retry.py  source.py
(+31 files in other folders)
