[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zagpy"
version = "0.1.0"
description = "A simple, yet flexible, RAG framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.0.0",
    "xxhash>=3.0.0",  # Fast file hashing for integrity check
]

[project.optional-dependencies]
# Retriever dependencies (for your colleague)
retriever = [
    "chromadb>=0.5.0",
    "qdrant-client>=1.16.2",
    "lancedb>=0.15.0",
    "pymilvus>=2.4.0",
    "meilisearch>=0.31.0",
]

# Embedder dependencies
embedder = [
    "openai>=1.0.0",
    "chakpy>=0.2.0",
    "ollama>=0.4.0",
    "sentence-transformers>=2.0.0",
]

# Reader dependencies
reader = [
    "markitdown>=0.0.1",
    "docling>=2.0.0",
    "mineru[all]>=0.7.0",
    "pdfplumber>=0.11.0",  # PDFPlumberReader
    "camelot-py[base]>=0.11.0",  # CamelotReader
    "tabula-py>=2.9.0",  # TabulaReader (requires Java)
    "PyMuPDF>=1.23.0",  # Used by pdfplumber and potential OCR readers
    "PyPDF2>=3.0.0",  # PDF metadata extraction
]

# Splitter and parser dependencies
processing = [
    "pandas>=1.3.0",
    "chonkie>=1.0.0",  # Token-based chunking for ChunkSplitter
]

# All dependencies
all = [
    "chromadb>=0.5.0",
    "qdrant-client>=1.16.2",
    "lancedb>=0.15.0",
    "pymilvus>=2.4.0",
    "meilisearch>=0.31.0",
    "openai>=1.0.0",
    "chakpy>=0.2.0",
    "ollama>=0.4.0",
    "sentence-transformers>=2.0.0",
    "markitdown>=0.0.1",
    "docling>=2.0.0",
    "mineru>=0.7.0",
    "pdfplumber>=0.11.0",
    "camelot-py[base]>=0.11.0",
    "tabula-py>=2.9.0",
    "PyMuPDF>=1.23.0",
    "PyPDF2>=3.0.0",
    "pandas>=1.3.0",
    "chonkie>=1.0.0",
    "python-dotenv>=0.19.0",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["zag*"]
